--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -91,10 +91,13 @@ main{
    
 
 }
+section{
+    margin-top: 130px;
+}
 
 .section-title{
-    
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 50px;
     font-weight: 700;
     font-size: 35px;
    
@@ -121,3 +124,30 @@ main{
     font-weight: 700;
     font-size: 20;
 }
+/* What i do styles */
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+    
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    color: #181818;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+    
+}
+.skill-des{
+    color: #757575;
+
+}
+/* resume style */
