--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -151,3 +151,33 @@ section{
 
 }
 /* resume style */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+    
+}
+.resume .sub-title{
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+    margin: 20px;
+}
+.resume .description{
+    color: #757575;
+
+}
+.resume-btn{
+    margin-top: 50px;
+    text-align: center;
+}
